# hf-skills

./: README.md  pyproject.toml
src/hf_skills/: __main__.py
src/hf_skills/app/: config.py  presenters.py  targets.py
src/hf_skills/cli/: main.py
tests/: test_cli.py  test_marketplace_parsing.py  test_marketplace_utils.py  test_presenters.py  test_skill_updates.py  test_update_targeting.py
