[project]
name = "hf-skills"
version = "0.1.0"
description = "Standalone Hugging Face skills installer CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.10",
  "python-frontmatter>=1.1",
  "typer>=0.12",
]

[project.scripts]
hf-skills = "hf_skills.cli.main:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "multilspy",
  "mypy>=1.14",
  "pytest>=8.3",
  "ruff>=0.11",
  "ty",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["hf_skills"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["frontmatter"]
ignore_missing_imports = true
